--- a/BeerMeUp/WebContent/WEB-INF/web.xml
+++ b/BeerMeUp/WebContent/WEB-INF/web.xml
@@ -2,12 +2,28 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>BeerMeUp</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>home.jsp</welcome-file>
   </welcome-file-list>
   <resource-ref>
     <description>JNDI reference to a data source</description>
-    <res-ref-name>jdbc/storage</res-ref-name>
+    <res-ref-name>jdbc/beer_me_up</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+  <servlet>
+    <servlet-name>BeerControl</servlet-name>
+    <servlet-class>it.beermeup.control.BeerControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>BeerControl</servlet-name>
+    <url-pattern>/beer_control</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>CartControl</servlet-name>
+    <servlet-class>it.beermeup.control.CartControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CartControl</servlet-name>
+    <url-pattern>/cart_control</url-pattern>
+  </servlet-mapping>
 </web-app>
