--- a/BeerMeUp/WebContent/WEB-INF/web.xml
+++ b/BeerMeUp/WebContent/WEB-INF/web.xml
@@ -48,4 +48,13 @@
     <servlet-name>ProductManagerControl</servlet-name>
     <url-pattern>/productManager_control</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>AddProduct</servlet-name>
+    <servlet-class>it.beermeup.control.AddProduct</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddProduct</servlet-name>
+    <url-pattern>/addProduct</url-pattern>
+  </servlet-mapping>
 </web-app>
