--- a/BeerMeUp/WebContent/WEB-INF/web.xml
+++ b/BeerMeUp/WebContent/WEB-INF/web.xml
@@ -66,7 +66,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
-    <url-pattern>/Login</url-pattern>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -75,7 +75,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Logout</servlet-name>
-    <url-pattern>/Logout</url-pattern>
+    <url-pattern>/logout</url-pattern>
   </servlet-mapping>
   
   
