--- a/BeerMeUp/WebContent/WEB-INF/web.xml
+++ b/BeerMeUp/WebContent/WEB-INF/web.xml
@@ -132,5 +132,16 @@
     <url-pattern>/userdata_control</url-pattern>
   </servlet-mapping>
   
+    <servlet>
+    <servlet-name>OrderDetailControl</servlet-name>
+    <servlet-class>it.beermeup.control.OrderDetailControl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OrderDetailControl</servlet-name>
+    <url-pattern>/orderdetail_control</url-pattern>
+  </servlet-mapping>
+  
+  
+  
   
 </web-app>
