--- a/BeerMeUp/WebContent/WEB-INF/web.xml
+++ b/BeerMeUp/WebContent/WEB-INF/web.xml
@@ -141,7 +141,14 @@
     <url-pattern>/orderdetail_control</url-pattern>
   </servlet-mapping>
   
+  <error-page>
+  	<location>/error.jsp</location>
+  </error-page>
   
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/error.jsp</location>
+</error-page>
   
   
 </web-app>
